# daohaus_predicts_yew_app

./: Cargo.toml  dakom_started_this.rs  index.html  package.json
src/: content.rs  main.rs
src/components/: mod.rs  prediction_card.rs
src/jscripts/: ethers_js_types.txt  get-payload-script.js  metamask.js
src/pages/: dashboard.rs  explorer.rs  home.rs  mod.rs  prediction.rs
