[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router= "0.16.0"
log = "0.4.6"
web-sys = "0.3.56"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
#ethers = "0.17.0"
gql_client = "1.0.6"
serde = "1.0.141"
serde_json = "1.0.82"